Fixed spacing

--- a/Frontend/app/login/style.css
+++ b/Frontend/app/login/style.css
@@ -1,3 +1,12 @@
+.border
+{
+  display: grid;
+  flex-direction: column;
+  gap: 10px;
+  border: none;
+  
+}
+
 
 input {
     border: 2px solid rgb(6, 6, 15, 0.3);
@@ -13,6 +22,7 @@ input {
   border-radius: 5px 5px 5px 5px;
   border: 1px solid #ebebc0;
   box-shadow: 0 5px 10px 0 rgb(0, 0, 0, 0.1);
+  margin-top: 5px;
 }
 
 
@@ -45,7 +55,3 @@ input {
   margin-bottom: 1rem;
 }
 
-.border
-{
-  border: none;
-}
